manifests/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo
  namespace: fleet-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-demo
  template:
    metadata:
      labels:
        app: nginx-demo
    spec:
      containers:
      - name: nginx
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
        command: ["/bin/sh","-c"]
        args:
        - |
          envsubst < /usr/share/nginx/html/index.template.html > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'
        volumeMounts:
        - name: content
          mountPath: /usr/share/nginx/html/index.template.html
          subPath: index.template.html

      volumes:
      - name: content
        configMap:
          name: nginx-content
